Lots of `Arrays.asList` -> modern `List.of`