@@ -601,7 +601,7 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	@Deprecated(forRemoval = true)
 	public void assertLore(String... lines)
 	{
-		assertLore(Arrays.asList(lines));
+		assertLore(List.of(lines));
 	}
 
 	/**
@@ -839,13 +839,13 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	@Override
 	public void addItemFlags(ItemFlag... itemFlags)
 	{
-		hideFlags.addAll(Arrays.asList(itemFlags));
+		hideFlags.addAll(List.of(itemFlags));
 	}
 
 	@Override
 	public void removeItemFlags(ItemFlag... itemFlags)
 	{
-		hideFlags.removeAll(Arrays.asList(itemFlags));
+		List.of(itemFlags).forEach(hideFlags::remove);
 	}
 
 	@Override
@@ -855,7 +855,7 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	}
 
 	@Override
-	public boolean hasItemFlag(ItemFlag flag)
+	public boolean hasItemFlag(@NotNull ItemFlag flag)
 	{
 		return hideFlags.contains(flag);
 	}
